--- a/fullstack/static/sass/buttons/buttons.sass
+++ b/fullstack/static/sass/buttons/buttons.sass
@@ -183,6 +183,7 @@
 
 // COURSES CTA BUTTON
 .courses-cta--button
+  display: inline-block
   margin-top: 2em
   background-color: #0cd29a
   color: #f2f2f2
